--- a/docker-swarm/group_vars/all.yml
+++ b/docker-swarm/group_vars/all.yml
@@ -18,6 +18,27 @@ registry_url: "{{ vault_registry_url }}" # The URL of the Docker registry.
 # Replace "vault_registry_url" with the actual registry URL if not using a vault.
 # Example: "https://index.docker.io/v1/" for Docker Hub or a custom URL for private registries.
 
+# NFS access restriction configuration
+# This variable defines which hosts/networks are allowed to access the NFS exports
+# It is used in the exports.j2 template to configure the NFS server's exports file
+# Format: IP address or hostname with optional netmask or CIDR notation
+#
+# Common values:
+# - "192.168.1.0/24"            # Allow access from entire subnet (192.168.1.0 through 192.168.1.255)
+# - "10.0.0.5"                  # Allow access from a single IP address
+# - "*.example.com"             # Allow access from all hosts in example.com domain
+# - "@trusted_network"          # Allow access from a netgroup (if NIS is configured)
+# - "10.0.0.0/8 192.168.0.0/16" # Multiple networks separated by spaces
+#
+# Security considerations:
+# - Avoid using "*" which allows access from any host, unless behind a secure firewall
+# - Consider using more restrictive options for production environments
+# - When possible, explicitly list the IPs of Docker Swarm nodes instead of entire subnets
+# - For high-security environments, also consider implementing firewall rules (iptables)
+#
+# This value is retrieved from Ansible Vault for security
+nfs_restriction: "{{ vault_nfs_restriction }}"
+
 # Security Note:
 # - Always use Ansible Vault to store sensitive information like usernames, passwords, and URLs.
 # - Avoid hardcoding sensitive credentials directly in this file to prevent unauthorized access.
