feat: updates for restricted nfs #4
- added a variable to get the ip address of the first nfs server in inventory
- nfs server ip address is used in the mounting process
- updated readme to show the example of the new nfs group

--- a/docker-swarm/create.yml
+++ b/docker-swarm/create.yml
@@ -3,7 +3,7 @@
 # Swarm initialization, and network setup. It uses roles to modularize tasks for better reusability and maintainability.
 
 - name: Setup NFS
-  hosts: nfs  # Target the NFS server group defined in the inventory.
+  hosts: nfs_servers  # Target the NFS server group defined in the inventory.
   become: true  # Execute tasks with elevated privileges (sudo).
   roles:
   - setup_nfs_server  # Use the `setup_nfs_server` role to configure the NFS server.
