--- a/docker-swarm/group_vars/all.yml
+++ b/docker-swarm/group_vars/all.yml
@@ -18,6 +18,12 @@ registry_url: "{{ vault_registry_url }}" # The URL of the Docker registry.
 # Replace "vault_registry_url" with the actual registry URL if not using a vault.
 # Example: "https://index.docker.io/v1/" for Docker Hub or a custom URL for private registries.
 
+# NFS Server Configuration
+# This variable stores the hostname or IP address of the NFS server
+# It is dynamically set to the first host in the 'nfs_servers' group from the inventory
+# This allows the playbook to automatically use the correct NFS server without hardcoding IP addresses
+nfs_server_host: "{{ groups['nfs_servers'][0] }}"
+
 # NFS access restriction configuration
 # This variable defines which hosts/networks are allowed to access the NFS exports
 # It is used in the exports.j2 template to configure the NFS server's exports file
